--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flash_type",
+  "name": "typeskill",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://vnshanmukh.github.io/typeskill/",
