--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,20 @@
 pipeline {
-agent any
-stages {
-stage ('build') {
-steps {
-sh 'npm --version'
-}
-}
-}
+    agent {label 'slave'}
+    stages {
+        stage('Build') {
+            steps {
+                echo 'Building..'
+            }
+        }
+        stage('Test') {
+            steps {
+                sh 'npm run text'
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo 'Deploying....'
+            }
+        }
+    }
 }
