--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,7 +7,9 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  
+  schedule:
+    - cron: '0 13 * * 1'
+   
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
